tests/baselines/reference/constructSignatureWithAccessibilityModifiersOnParameters2.errors.txt
==== tests/cases/conformance/types/objectTypeLiteral/callSignatures/constructSignatureWithAccessibilityModifiersOnParameters2.ts (15 errors) ====
    // Parameter properties are not valid in overloads of constructors
    
    class C {
        constructor(public x, private y);
                    ~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
                              ~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
        constructor(public x, private y) { }
                           ~
!!! error TS2300: Duplicate identifier 'x'.
                                      ~
!!! error TS2300: Duplicate identifier 'y'.
    }
    
    class C2 {
        constructor(private x);
                    ~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
        constructor(public x) { }
                           ~
!!! error TS2300: Duplicate identifier 'x'.
    }
    
    class C3 {
        constructor(private x);
                    ~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
        constructor(private y) { }
    }
    
    interface I {
        new (public x);
             ~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
        new (public x);
             ~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
    }
    
    interface I2 {
        new (private x);
             ~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
        new (private x);
             ~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
    }
    
    var a: {
        new (public x);
             ~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
        new (public y);
             ~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
    }
    
    var b: {
        new (private x);
             ~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
        new (private y);
             ~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
    }